@@ -1,4 +1,7 @@
 $Rev$
+[2008/05/12]
+RegexWindow.py      Improve regex window, and when you set Unicode flag, it'll 
+                    automatically convert \uXXXX to unichr
 [2008/05/05]
 mEditorCtrl.py      Fix Cancel Save file will prompt save as dialog again bug
 
